--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,34 @@
 body{
    /* Set line spacing */
+   line-height: 2;
 }
 
 
 header, nav{
     /* Set padding and margin */
+    padding: 12px 24px 12px 24px;
+    margin: 24px auto;
 
 }
 nav ul li{
     /* Set display, margin, padding, font-size, background-color */
-
+    display: inline-block;
+    text-align: justify;
+    text-align: center;
+    font-weight: bolder;
+    margin: 0 12px;
+    padding: 0 12px;
+    background-color: aqua;
 }
 
 nav a{
     /* Set text decoration*/
+    text-decoration: none;
 }
 
 a:visited{
     /* Set color */
+    color: black;
 
 }
 
@@ -28,7 +39,8 @@ nav a.current{
 
 h1{
    /*Set font and font size*/
-
+    font-family: "Merriweather", "Anton", "Times New Roman","Helvetica Neue";
+    font-weight: bolder;
 }
 
 h2{
@@ -46,15 +58,29 @@ h1, h2, h3{
 }
 .grid{
     /*Set width, margin, border properties, background color, and grid properties */
+    display: grid;
+    width: 90%;
+    margin: 0 auto;
+    grid-template-columns: 30% 30% 30%;
+    justify-content: space-around;
+    row-gap: 10px;
+    background-color: gray;
 }
 
 .grid div{
     /* Set border properties, padding, and background color */
+    border: 3px solid black;
+    border-radius: 20px;
+    background-color: white;
+    padding: 10px;
 
 }
 
 .grid img{
     /* Set width, margin, and display */
+    width: 90%;
+    display: block;
+    margin: 0 auto;
 }
 
 
@@ -63,18 +89,18 @@ h1, h2, h3{
     }
 
 .grid div:nth-child(3n)  {
-    /* Set box shadow */ 
+    /* Set box shadow */
 }
 
 .grid div:nth-child(3n+2)  {
      /* Set box shadow */
 }
-    
+
 
 p + p {
      /* Set indentation */
   }
-  
+
 p{
      /* Set margin */
 }
